Fixed notch issue on iPhone

--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,6 @@
 }
 
 body {
-  padding-top: env(safe-area-inset-top);
-  padding-bottom: env(safe-area-inset-bottom);
   font-family: 'Roboto', sans-serif;
   margin: 0;
   background-color: var(--bg);
@@ -23,6 +21,11 @@ body {
   overflow: auto;
   height: 1600px;
   width: 99%;
+
+  padding-top: env(safe-area-inset-top);
+  padding-bottom: env(safe-area-inset-bottom);
+  padding-left: env(safe-area-inset-left);
+  padding-right: env(safe-area-inset-right);
 }
 
 .mono {
